--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para Você</title>
+    <title>Surpresa Lisley</title>
     <style>
       body {
         display: flex;
@@ -60,7 +60,7 @@
       <source src="die_with_a_smile.mp3" type="audio/mp3" />
     </audio>
     <div class="container">
-      <h1>Eu te amo ❤️</h1>
+      <h1>Eu te amo, mil milhões ❤️</h1>
       <div id="loveText">Eu te amo</div>
     </div>
     <script>
